--- a/app/src/main/res/layout/list_item_activity.xml
+++ b/app/src/main/res/layout/list_item_activity.xml
@@ -5,6 +5,10 @@
     android:padding="@dimen/padding_around_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="70dp"
+        android:layout_height="110dp"
+        android:orientation="vertical">
     <RelativeLayout
         android:layout_width="@dimen/activity_icon_size"
         android:layout_height="@dimen/activity_icon_size">
@@ -22,6 +26,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="70dp"
+        android:layout_height="40dp">
+        <Button
+            android:layout_height="40dp"
+            android:layout_width="70dp"
+            android:textSize="15dp"
+            android:id="@+id/activity_button">
+        </Button>
+    </RelativeLayout>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -35,14 +50,19 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/activity_category_name"
+                android:text="Running"
                 android:textSize="@dimen/activity_label_text_size"
+                android:textColor="@color/textColorSecondary"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_weight="1"
+                />
             <TextView
                 android:id="@+id/activity_xp_gain"
-                android:layout_width="fill_parent"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:gravity="right"
+                android:text="+manyxp"
                 android:textSize="@dimen/activity_xp_text_size"/>
         </LinearLayout>
 
@@ -55,9 +75,10 @@
             <TextView
                 android:id="@+id/activity_description"
                 android:layout_width="0dp"
+                android:text="Run a mile in my shoes"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text=""
+                android:textColor="@color/textColorSecondary"
                 android:paddingTop="@dimen/padding_between_desc_label"
                 android:textSize="@dimen/activity_desc_text_size"/>
             <TextView
