--- a/app/src/main/res/layout/list_item_skill.xml
+++ b/app/src/main/res/layout/list_item_skill.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/skill_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/textColorSecondary"
                 android:text="Skill Name"
                 android:textSize="35dp"
                 android:gravity="center"/>
